--- a/client/index.html
+++ b/client/index.html
@@ -1,47 +1,56 @@
+
 <!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>chatterbox</title>
-    <link rel="stylesheet" href="styles/styles.css">
-
-    <!-- dependencies -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script>
-      // YOU DO NOT NEED TO EDIT THIS CODE
-      if (!/(&|\?)username=/.test(window.location.search)) {
-        var newSearch = window.location.search;
-        if (newSearch !== '' & newSearch !== '?') {
-          newSearch += '&';
-        }
-        newSearch += 'username=' + (prompt('What is your name?') || 'anonymous');
-        window.location.search = newSearch;
-      }
-    </script>
-    <!-- your scripts -->
-    <script src="env/config.js"></script>
-    <script src="scripts/refactor.js"></script>
+    <title>Chat with JSON!</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="lib/jquery/jquery-1.9.1.js"></script>
+    <script src="lib/moment.min.js"></script>
   </head>
   <body>
+
     <div id="main">
-      <h1>chatterbox</h1>
-      <!-- Your HTML goes here! -->
+      <h1 class="title">Chat with JSON</h1>
+      <ul></ul>
+    </div>
 
-      <div class="spinner"><img src="images/spiffygif_46x46.gif"></div>
-      <div id="rooms">
-        Room:
-        <select id="roomSelect">
-        </select>
+    <div id="controls">
+      <div id="post">
+        <h1>Post a Message</h1>
+        <form class="submit">
+          <div id="userandroom">
+            <p>
+              <label for="username" value="username">
+              <input class="usernameInput" id="userName" type="text" placeholder="username"/>
+            </p>
+          </div>
+          <div id="submitbutton">
+            <input id="submitButton" type="submit" value="submit"/>
+          </div>
+          <p>
+            <label for="userInput" value="message">
+            <input class="userInput" id="userInput" type="text" name="message" placeholder="message"/>
+          </p>
+        </form>
       </div>
-      <form action="#" id="send" method="post">
-        <input type="text" name="message" id="message"/>
-        <input type="submit" name="submit" class="submit"/>
-      </form>    </div>
-    <div id="chats"></div>
-
+    </div>
+    <script src="js/setup.js"></script>
     <script>
-      $(function(){
-        app.init()
+      // Get messages every 7.5 seconds
+      getData();
+      setInterval(getData, 7500);
+
+      $('.submit').on('submit', function(event) {
+        event.preventDefault();
+        var username = $('.usernameInput').val();
+        $('#backButton').toggle();
+        $('.title').text('Chat with JSON');
+
+        postData($('.userInput').val(), username);
+        $('.userInput').val('');
       });
-    </script>  </body>
+    </script>
+  </body>
 </html>
